# crypto-book

./: .gitignore  404.html  README.md  book.toml  index.html  intro.html  macros.txt  print.html  references.html  searchindex.js  searchindex.json
.github/workflows/: publish.yml
assets/: custom.css  mdbook-admonish-custom.css
cryptographic-notions/: bls-signatures.html  commitment-schemes.html  games-models-and-assumptions.html  polynomial-commitment-schemes.html
cryptography/: bls-signatures.html  commitment-schemes.html  games-models-and-assumptions.html  polynomial-commitment-schemes.html  signatures-generalities.html
mathematical-preliminaries/: elliptic-curves.html  groups.html  pairings.html  polynomials.html
mathematics/: basic-arithmetic.html  elliptic-curves.html  groups.html  pairings.html  polynomials.html
puzzles/puzzle-chaos-theory/: Cargo.toml  README.md
puzzles/puzzle-chaos-theory/src/: main.rs
puzzles/puzzle-gamma-ray/: Cargo.toml  README.md
puzzles/puzzle-supervillain/: README.md
puzzles/zkhack-bls-pedersen/: README.md
puzzles/zkhack-double-trouble/: README.md
puzzles/zkhack-trusted-setup/: README.md
src/: SUMMARY.md  intro.md  macros.txt  references.md
src/cryptographic-notions/: bls-signatures.md  commitment-schemes.md  games-models-and-assumptions.md  polynomial-commitment-schemes.md
src/cryptography/: bls-signatures.md  commitment-schemes.md  games-models-and-assumptions.md  polynomial-commitment-schemes.md  signatures-generalities.md
theme/: pagetoc.css
zk-hack-puzzles/: before-starting.html
(+61 files in other folders)
