[package]
name = "zkhack-puzzle-to-publish"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ark-ff = "0.4.2"
ark-ec = "0.4.2"
ark-bls12-381 = "0.4.0"
sha2 = "0.10"
ark-serialize = { version = "^0.4.0", features = [ "derive" ] }
prompt = { git = "https://github.com/kobigurk/zkhack-prompt" }
